--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,8 +17,11 @@
     "babel-register": "^6.26.0",
     "body-parser": "1.20.1",
     "cloudinary": "^2.0.1",
+    "cookie-parser": "1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "jsonwebtoken": "8.5.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.9.1",
