--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,9 +21,11 @@
     "date-fns": "^3.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.13",
     "react-hook-form": "^7.50.1",
     "react-router-dom": "^6.22.0",
     "react-toastify": "^10.0.4",
+    "recharts": "^2.12.2",
     "styled-components": "^6.1.8"
   },
   "peerDependencies": {
